Fixed bleeding text issue. Tweaked layout. Updated About me for better visibility.Updated barbershop image.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -80,7 +80,6 @@ h1 {
   font-family: var(--font-primary);
   font-size: 1.25rem;
   font-weight: 900;
-  margin-bottom: 0.5em;
   color: var(--text-color-light);
 }
 
@@ -113,17 +112,18 @@ body {
   height: 100%;
   background-image: url("/Assets/Images/bg.jpg");
 
-  backdrop-filter: blur(100px) saturate(.8);
-
-  overflow-x: hidden;
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  scroll-snap-type: mandatory;
+  overflow: hidden;
 }
 
 main {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  backdrop-filter: blur(150px) saturate(.7);
+
+  scroll-snap-type: y mandatory;
+  overflow: scroll;
+  scroll-behavior: smooth;
 }
 
 header {
@@ -200,9 +200,9 @@ footer p {
   display: flex;
   position: relative;
   flex-direction: column;
-  height: 100vh;
   align-items: center;
   justify-content: center;
+  scroll-snap-align: center;
 }
 
 .container {
@@ -210,8 +210,8 @@ footer p {
   flex-direction: column;
   justify-content: space-between;
 
-  width: 90%;
   height: 100%;
+  width: 90%;
   align-items: center;
   margin: 0 auto;
 }
@@ -228,6 +228,7 @@ footer p {
 /*Individual sections*/
 #banner-section {
   position: relative;
+  min-height: 100vh;
 }
 
 #banner-section h1,
@@ -237,9 +238,8 @@ h2 {
 
 #banner-section h1 {
   font-size: 3.5rem;
-  color: #272b30;
+  color: #ffffff;
   text-wrap: nowrap;
-  text-shadow: 1px 1px 10px rgba(38, 42, 68, 0.436);
 }
 
 
@@ -339,7 +339,7 @@ h2 {
   z-index: -5;
   overflow: hidden;
 
-  background: linear-gradient(0deg, rgba(112, 112, 117, 0.269), rgb(62, 54, 66));
+  background: linear-gradient(0deg, rgba(45, 45, 54, 0.3), rgb(39, 50, 59));
 }
 
 .blob-container {
@@ -358,7 +358,7 @@ h2 {
   left: calc(50% - var(--blob-radius) / 2);
 
   background: radial-gradient(circle at center,
-      rgba(154, 87, 231, 0.6) 0,
+      rgba(255, 32, 84, 0.6) 0,
       rgba(43, 57, 255, 0) 50%) no-repeat;
   mix-blend-mode: var(--blob-blendmode);
 
@@ -407,7 +407,7 @@ h2 {
   left: calc(50% - var(--blob-radius) / 2 - 100px);
 
   background: radial-gradient(circle at center,
-      rgba(82, 255, 238, 0.6) 0,
+      rgba(165, 255, 105, 0.6) 0,
       rgba(103, 255, 43, 0) 50%) no-repeat;
   mix-blend-mode: var(--blob-blendmode);
   transform-origin: calc(50% - 200px);
@@ -439,11 +439,12 @@ h2 {
   transform: translate(-50%, -50%);
 
   background: radial-gradient(circle at center,
-      rgba(89, 197, 161, 0.6) 0,
+      rgba(89, 103, 197, 0.6) 0,
       rgba(64, 43, 255, 0) 50%) no-repeat;
   mix-blend-mode: var(--blob-blendmode);
 }
 
+/* 
 @keyframes blob-rotate {
   0% {
     transform: rotate(0deg);
@@ -484,40 +485,37 @@ h2 {
   100% {
     transform: translateX(-50%);
   }
-}
+} */
 
 #project-section {
   background-color: #1310148e;
   box-shadow: inset 0 0 12px 1px rgb(12, 13, 15);
   overflow: visible;
+  min-height: 100vh;
 }
 
-#project-section .container {
-  height: 100vh;
-}
 
 .project-list.row {
   display: flex;
   flex-direction: column;
   justify-content: start;
   width: 100%;
-
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
 }
 
 .project-grid-container {
   display: grid;
   width: 100%;
+  max-height: 550px;
   max-width: 450px;
   padding: 0 2rem;
-  min-height: 100%;
+
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(100, 100%);
   row-gap: 5rem;
   column-gap: 3rem;
+
   z-index: 2;
+  overflow: scroll;
+  scroll-behavior: smooth;
 }
 
 .project-container {
@@ -528,6 +526,8 @@ h2 {
   background-color: #00000054;
   align-items: center;
   box-shadow: 0 0 70px 5px rgba(17, 21, 24, 0.2);
+  scroll-snap-align: center;
+
 }
 
 .project-details-top,
@@ -597,6 +597,7 @@ h2 {
   width: 100%;
   height: 100%;
   align-items: end;
+  margin: 0 1rem;
   justify-content: center;
 }
 
@@ -660,7 +661,10 @@ h2 {
 
 #about-section {
   height: fit-content;
-  padding: 1rem;
+  min-height: 1280px;
+  padding: 2rem;
+  background-color: #070c11eb;
+  scroll-snap-align: start;
 }
 
 .aboutMe {
@@ -691,7 +695,7 @@ h2 {
 }
 
 .aboutMe_experience img {
-  width: 55px;
+  width: 50px;
 }
 
 @keyframes spin {
@@ -725,10 +729,6 @@ h2 {
     font-size: 16px;
   }
 
-
-  #about-section {
-    height: 100vh;
-  }
 
   .content-card {
     width: 80%;
@@ -807,10 +807,14 @@ h2 {
     height: 40%;
   }
 
+  .filter-category-container {
+    align-items: center;
+  }
+
   .project-grid-container {
     max-width: 1400px;
-
-    margin-top: 5rem;
+    max-height: 1250px;
+    margin: auto 0;
     grid-template-columns: repeat(2, minmax(300px, 1fr));
     grid-template-rows: auto;
     column-gap: 5rem;
